example for multilines

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         lat:51.059,  
                         lng: 13.773,
                         label: {
-				message: "<a href='http://heimgruen.de'>A linked sponsor</a>",
+				message: "heimgruen<br><a href='http://heimgruen.de'>A linked sponsor</a>",
                             options: {
                                 noHide: true
                             }
