adjusted marker positions, expanded readme

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         app.controller('MainCtrl', [ '$scope', function($scope) {
 
-	    var sprossbox_icon = { iconUrl:'sprossbox-icon.png'}
+	    var sprossbox_icon = { iconUrl:'sprossbox-icon.png',iconAnchor:[12,44],popupAnchor:[30,23]}
 
             angular.extend($scope, {
                 centralgermany: {
