--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="de" ng-app="sponsormapapp">
 <head>
+    <title>Sprossbox - Unsere Unterstützer</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="bower_components/angular/angular.min.js"></script>
@@ -16,8 +17,8 @@
     <link rel="stylesheet" href="bower_components/leaflet.markercluster/dist/MarkerCluster.Default.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
     <style>
-	.leaflet-container {font-family: "Roboto",Helvetica, Arial, sans-serif !important;}
-	.leaflet-container a {color:black;}
+	.leaflet-label {top: -65px; left: 25px; font-family: "Roboto",Helvetica, Arial, sans-serif !important;}
+	.leaflet-label a {color:black;}
     </style>
     <script> 
 	WebFont.load({ google: {families: ['Roboto']} });
