--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         lat: 50.985148,
                         lng: 12.970327,
                         label: {
-                            message: "An unlinked sponsor",
+                            message: "Sprossbox-Team",
                             options: {
                                 noHide: true
                             }
