--- a/index.html
+++ b/index.html
@@ -61,7 +61,72 @@
                             }
                         },
 			icon: sprossbox_icon
-                    }
+                    },
+
+                    s3: {
+                        group: 'sprossbox',
+                        lat: 51.299697, 
+                        lng: 13.757567,
+                        label: {
+                            message: "Ingenierbüro Bauschke",
+                            options: {
+                                noHide: true
+                            }
+                        },
+			icon: sprossbox_icon
+                    },
+
+                    s4: {
+                        group: 'sprossbox',
+                        lat: 48.313303, 
+                        lng: 10.860448,
+                        label: {
+                            message: "Schapfl Heizung<br><a href='https://www.hp-schapfl.de'>www.hp-schapfl.de/</a>",
+                            options: {
+                                noHide: true
+                            }
+                        },
+			icon: sprossbox_icon
+                    },
+
+                    s5: {
+                        group: 'sprossbox',
+                        lat: 48.768079, 
+                        lng: 11.438340,
+                        label: {
+                            message: "Magnus Armbruster<br><a href='http://www.ak-kuechen.de'>www.ak-kuechen.de</a>,
+                            options: {
+                                noHide: true
+                            }
+                        },
+			icon: sprossbox_icon
+                    },
+
+                    s6: {
+                        group: 'sprossbox',
+                        lat: 49.667981, 
+                        lng: 10.924688,
+                        label: {
+                            message: "bergblumengarten><a href='http://www.bergblumengarten.de'>www.bergblumengarten.de</a>,
+                            options: {
+                                noHide: true
+                            }
+                        },
+			icon: sprossbox_icon
+                    },
+
+                    s7: {
+                        group: 'sprossbox',
+                        lat: 50.618380, 
+                        lng: 12.727900,
+                        label: {
+                            message: "Christin Kloss<br><a href='http://www.ckillustration.de'>www.ckillustration.de</a>,
+                            options: {
+                                noHide: true
+                            }
+                        },
+			icon: sprossbox_icon
+                    },
                 },
             });
         } ]);
