--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         lat: 48.768079, 
                         lng: 11.438340,
                         label: {
-                            message: "Magnus Armbruster<br><a href='http://www.ak-kuechen.de'>www.ak-kuechen.de</a>,
+                            message: "Magnus Armbruster<br><a href='http://www.ak-kuechen.de'>www.ak-kuechen.de</a>",
                             options: {
                                 noHide: true
                             }
@@ -107,7 +107,7 @@
                         lat: 49.667981, 
                         lng: 10.924688,
                         label: {
-                            message: "bergblumengarten><a href='http://www.bergblumengarten.de'>www.bergblumengarten.de</a>,
+                            message: "bergblumengarten><a href='http://www.bergblumengarten.de'>www.bergblumengarten.de</a>",
                             options: {
                                 noHide: true
                             }
@@ -120,7 +120,7 @@
                         lat: 50.618380, 
                         lng: 12.727900,
                         label: {
-                            message: "Christin Kloss<br><a href='http://www.ckillustration.de'>www.ckillustration.de</a>,
+                            message: "Christin Kloss<br><a href='http://www.ckillustration.de'>www.ckillustration.de</a>",
                             options: {
                                 noHide: true
                             }
