--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                         lat: 49.667981, 
                         lng: 10.924688,
                         label: {
-                            message: "bergblumengarten><a href='http://www.bergblumengarten.de'>www.bergblumengarten.de</a>",
+                            message: "bergblumengarten<br><a href='http://www.bergblumengarten.de'>www.bergblumengarten.de</a>",
                             options: {
                                 noHide: true
                             }
