fix position of map for use in iframe

--- a/index.html
+++ b/index.html
@@ -133,6 +133,6 @@
     </script>
 </head>
 <body ng-controller="MainCtrl">
-    <leaflet lf-center="centralgermany" markers="markers" height="100vh" width="100vw"></leaflet>
+    <leaflet lf-center="centralgermany" markers="markers" height="100vh" width="100vw" style="position:fixed;top:0;left:0></leaflet>
 </body>
 </html>
